Заполнение основных блоков резюме

--- a/index.html
+++ b/index.html
@@ -1,10 +1,222 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Dmitry Bulashev</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
+        <title>Dmitry Bulashev</title>
+    </head>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col col-3">
+                    <img class="img-fluid rounded" src="https://avatars.githubusercontent.com/u/14834178?v=3">
+                </div>
+
+                <div class="col">
+                    <h1>Булашев Дмитрий Владимирович</h1>
+                    <h4>Технический директор</h4>
+                    <p>01.11.1984г</p>
+                    <address>
+                        <p><a href="mailto:d.bulashev@gmail.com">d.bulashev@gmail.com</a></p>
+                        <p><a href="tel:+79612120280">+7-961-212-02-80</a></p>
+                        <p><a href="https://t.me/webw785"><img class="img-fluid rounded" src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"></a></p>
+                    </address>
+                </div>
+            </div>
+            <hr>
+        </div>
+        <div class="container">
+            <h3>Образование:</h3>
+            <div class="row">
+                <div class="col-2">
+                    2001-2006
+                </div>
+                <div class="col">
+                    <p>Высшее. Тюменский Государственный Университет.<br>
+                    Факультет математики и компьютерных наук.<br>
+                    Математик (специализация: математическое моделирование).
+                </div>
+            </div>
+            <hr>
+
+            <h3>Опыт работы:</h3>
+            <div class="row">
+                <div class="col-2">
+                2014 — НВ
+                </div>
+                <div class="col">
+                    <p><a href="https://it-uk.ru"><strong>Жилищный Стандарт</strong></a><br>
+                    Прошел путь от программиста до технического директора</p>
+
+                    <p>Небольшая IT компания, штат 35 человек. Компания занимается созданием продуктов для сферы жилищно-коммунального хозяйства. Основными продуктами являются CRM АСУ Жилищный Стандарт, Мобильные приложения сотрудника (часть CRM в виде нативных приложений iOS, Android), Мобильное приложение жителя ЖКХ.Диалог (MAU 12 тыс), Сайт управляющей компании (MAU 120 тыс). Пользователями системы являются сотрудники управляющих компаний в 53 регионах и 126 городах России. CRM автоматизирует основные бизнес процессы предприятия, самые востребованные: приём и исполнение заявок от населения, начисление за жилищно-коммунальные услуги (биллинг).</p>
+
+                    <p>В момент моего прихода в копанию, CRM существовала в виде программы, удовлетворяющей потребности одного клиента,
+                        я помог превратить её в продукт, который можно тиражировать на различных по своей специфике клиентов
+                        с отличающимися бизнес процессами. На текущий момент возможны основные варианты поставки Box, Cloud,
+                        On-premise. Вариант поставки Cloud может бесшовно мигрировать между cloud провайдерами.
+                        Кодовая база CRM превышает 1 миллион строк кода. Часть бизнес логики реализована в виде
+                        хранимых функций и процедур в базе данных.
+                    </p>
+
+                    <p>Сформировал и организовал работу трёх технических отделов в компании: разработки, технической поддержки,
+                        системного администрирования. Разработал регламенты и рабочие инструкции
+                        (внедрение, тех поддержка, разработка, тех регламент по обработке и защите персональных данных).
+                    </p>
+
+                    <p>Инфраструктурная документация полностью описывается в инвентаре системы управления конфигурациями.
+                    Плейбуки автоматизируют и охватывают большинство инфраструктурных задач.
+                    </p>
+
+                    <p>Проводил оптимизации продукта и инфраструктурных решений, так, за 2022 год за счёт плановой
+                        оптимизаций были сокращены расходы на облачную инфраструктуру на 48%.
+                    </p>
+
+                    <p>Создал комфортные условия труда. С 2014 года из компании ушли 54% технических специалистов
+                        (в среднем проработали по 2 года 1 месяц).
+                        Из тех кто сейчас в штате средний срок работы в компании 3 года 10 месяцев.
+                        Перцентили времени работы кто ушел: 25 - 6 месяцев, 75 - 2 года 10 месяцев.
+                        Кто сейчас работает: 25 - 1 год 11 месяцев, 75 - 4 года 11 месяцев.
+                        Сотрудники имеют возможности развития, есть истории роста из специалиста тех поддержки
+                        в PHP программисты. Собрал команду профессионалов, которые отличаются опытом и эффективностью
+                        в своих областях.
+                    </p>
+
+                    <p>В роли программиста внес большой вклад в развитие CRM системы. При возможности комбинировал
+                        менеджерскую роль и программирование. Хорошо разбираюсь в оптимизации и профилировании (в том числе SQL).
+                        Активно интересуюсь базами данных.
+                    </p>
+
+                    <p>Для бизнеса помогал формировать бюджет, участвовал в формировании целей и задач компании,
+                        анализировал конкурентов, участвовал в сложных переговорах с контрагентами.
+                        Одним из моих основных достижений является разработка и внедрение линейки программных продуктов,
+                        которые значительно упростили и улучшили работу в сфере ЖКХ.
+                        Продукты успешно конкурируют с конкурентами-тяжеловесами,
+                        которые имеют неограниченные бюджеты на разработку ПО (например Сбербанк).
+                        Основная роль меня как технического директора – обеспечить эффективную работу и рост технических
+                        отделов, развивать и совершенствовать продукты и услуги.
+                    </p>
+
+                    <p> Стек используемых технологий: Linux, PHP, PostgreSQL, Docker Compose, Docker Swarm, Ansible,
+                        Terraform, Kafka, S3, Asterisk (+Lua), Java, Swift.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                2008 — 2014
+                </div>
+                <div class="col">
+                    <p><strong>СвязьПроектСервис.</strong><br>
+                        Инженер — программист</p>
+                    <p>Разработал и внедрил Биллинг для АТС. Внедрение принесло двухкратный рост выручки компании за счёт
+                        расширения перечня предоставляемых услуг. Клиентская часть кросплатформенная: Linux, Windows.</p>
+                    <p>Стек: PostgreSQL, Qt, Python.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    2006 — 2014
+                </div>
+                <div class="col">
+                    <p><strong>Тюменское Центральное Агентство Воздушных Сообщений</strong><br>
+                        Инженер
+                    </p>
+                    <p>Сопровождение систем бронирования (СИРЕНА) авиа и жд билетов, обслуживание SCO-Unix и Linux систем,
+                        базы данных ORACLE.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    2003 — 2006
+                </div>
+                <div class="col">
+                    <p><strong>КогалымНИПИнефть (ЛУКОИЛ)</strong><br> инженер — программист</p>
+                    <p>Разработка программного комплекса для мониторинга нефтегазовых месторождений
+                        (автоматизация прогнозирования запасов, контроль динамики добычи, картография).
+                        Опыт разработки в команде (10 программистов, 1 DBA). Активно использовались математические модели и алгоритмы.
+                    </p>
+                    <p>Стек: C++, MSSQL.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    2001 — 2003
+                </div>
+                <div class="col">
+                    <p><strong>Тюменское Центральное Агентство Воздушных Сообщений</strong><br>
+                        инженер — программист
+                    </p>
+                    <p>
+                        Разработка корпоративных систем.
+                    </p>
+                    <p>
+                        Стек: C, Linux, MySQL.
+                    </p>
+                </div>
+
+            </div>
+            <hr>
+            <div class="container">
+                <h3>Патенты (в соавторстве):</h3>
+                <ul>
+                    <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2021667930">2021667930</a> Система управления ЖКХ «Жилищный Стандарт»;</li>
+                    <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2020664240">2020664240</a> Жилищный стандарт – Freemium;</li>
+                    <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2020664061">2020664061</a> АСУ Жилищный стандарт. Онлайн-кассы;</li>
+                    <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2018664578">2018664578</a> Автоматизированная система управления «Жилищный стандарт»;</li>
+                    <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2016618138">2016618138</a> Жилищный стандарт. Городская Диспетчерская Служба;</li>
+                    <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2015663413">2015663413</a> Автоматизированная система управления Жилищная инспекция.</li>
+                </ul>
+            </div>
+            <hr>
+            <div class="container">
+                <h3>Сертификат iKombat:</h3>
+
+                <a href="https://my.wakeup-s.com/certificates/view/direct?id=01EAXYBN95K71F6E4DME1JM9NE">Рег. № 197/16062020</a>
+            </div>
+            <hr>
+            <div class="container">
+                <h3>Отзывы сотрудников:</h3>
+                <ul class="list-unstyled">
+                    <li>
+                        <figure>
+                            <blockquote>
+                                <div class="card">
+                                    <div class="card-body">
+                                        Сотрудничество с тобой – это уникальный и удивительный опыт для меня. Было по-разному: и легко (из-за твоего острого чувства справедливости), и сложно (из-за твоего консерватизма), но точно могу сказать, что всегда интересно.
+                                        Потому что ты человек с совершенно особенным складом ума: у тебя своё видение мира, ты всегда всё систематизируешь и анализируешь, обладаешь огромным багажом знаний, умений и навыков, на любой довод можешь привести массу аргументов и доказательств, при чем как в цифрах, так и в фактах. При этом тебе не чужды чувства и эмоции, ты с пониманием относишься к потребностям окружающих тебя людей, внимательно и чутко.
+                                        А еще я бесконечно уважаю тебя за то, что у тебя на все есть свое мнение и ты его отстаиваешь, даже когда оно не совпадает с мнением большинства, ты остаешься верен себе и своим принципам.
+                                        Самое важное для меня, пожалуй, то, что с тобой всегда можно было обсудить любой вопрос, поговорить, спросить совет. Поговорить как с руководителем, как с наставником, как с человеком. Без страха осуждения или что от меня «отмахнутся». Не к каждому начальнику можно прийти с разговором. А к тебе можно. И это ценно и дорого.
+                                        Ты очень отзывчивый. Всегда готов прийти на помощь ребятам и потушить пожар и делал это много раз. Без короны на голове «Я начальник, чините сами». Это круто, что на тебя можно положиться в экстренной ситуации.
+                                        А еще ты увлеченный. Меня вдохновляют люди, которые с любовью и интересом относятся к делу своей жизни, что-то творят, создают сами. Наблюдать за рождением какого-то нового продукта – это волшебство. Поэтому для меня ты - настоящий волшебник)
+                                        Спасибо тебе за возможность работать под твоим руководством и рядом с тобой!
+                                  </div>
+                                </div>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                                Екатерина Ноговицина, руководитель службы технической поддержки
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+            </div>
+            <hr>
+            <div class="container">
+                <h3>Отзывы клиентов о разработанном продукте</h3>
+                <div class="row">
+                    <div class="col">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/JeKcj2bs4EA?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                    </div>
+                    <div class="col">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ftUSY7fRS9U?si=6rKG3deILgyfsdjk?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                    </div>
+                </div>
+            </div>
+            <p>
 </body>
 </html>
