--- a/index.html
+++ b/index.html
@@ -79,8 +79,27 @@
                     <p>Создал комфортные условия труда. С 2014 года из компании ушли 54% технических специалистов
                         (в среднем проработали по 2 года 1 месяц).
                         Из тех кто сейчас в штате средний срок работы в компании 3 года 10 месяцев.
-                        Перцентили времени работы кто ушел: 25 - 6 месяцев, 75 - 2 года 10 месяцев.
-                        Кто сейчас работает: 25 - 1 год 11 месяцев, 75 - 4 года 11 месяцев.
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Процентиль времени работы</th>
+                                    <th>25</th>
+                                    <th>75</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Время работы кто ушел</td>
+                                    <td>6 месяцев</td>
+                                    <td>2 года 10 месяцев</td>
+                                </tr>
+                                <tr>
+                                    <td>Время работы кто сейчас в штате</td>
+                                    <td>1 год 1 месяц</td>
+                                    <td>5 года 11 месяцев</td>
+                                </tr>
+                            </tbody>
+                        </table>
                         Сотрудники имеют возможности развития, есть истории роста из специалиста тех поддержки
                         в PHP программисты. Собрал команду профессионалов, которые отличаются опытом и эффективностью
                         в своих областях.
@@ -182,7 +201,7 @@
                             <blockquote>
                                 <div class="card">
                                     <div class="card-body">
-                                        Сотрудничество с тобой – это уникальный и удивительный опыт для меня. Было по-разному: и легко (из-за твоего острого чувства справедливости), и сложно (из-за твоего консерватизма), но точно могу сказать, что всегда интересно.
+                                        <h3 class="text-muted">“</h3> Сотрудничество с тобой – это уникальный и удивительный опыт для меня. Было по-разному: и легко (из-за твоего острого чувства справедливости), и сложно (из-за твоего консерватизма), но точно могу сказать, что всегда интересно.
                                         Потому что ты человек с совершенно особенным складом ума: у тебя своё видение мира, ты всегда всё систематизируешь и анализируешь, обладаешь огромным багажом знаний, умений и навыков, на любой довод можешь привести массу аргументов и доказательств, при чем как в цифрах, так и в фактах. При этом тебе не чужды чувства и эмоции, ты с пониманием относишься к потребностям окружающих тебя людей, внимательно и чутко.
                                         А еще я бесконечно уважаю тебя за то, что у тебя на все есть свое мнение и ты его отстаиваешь, даже когда оно не совпадает с мнением большинства, ты остаешься верен себе и своим принципам.
                                         Самое важное для меня, пожалуй, то, что с тобой всегда можно было обсудить любой вопрос, поговорить, спросить совет. Поговорить как с руководителем, как с наставником, как с человеком. Без страха осуждения или что от меня «отмахнутся». Не к каждому начальнику можно прийти с разговором. А к тебе можно. И это ценно и дорого.
