--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
         <title>Dmitry Bulashev</title>
+        <meta property="og:image" content="https://avatars.githubusercontent.com/u/14834178?v=3" />
+        <meta property="og:description" content="Технический директор" />
+        <meta property="og:title" content="Булашев Дмитрий" />
     </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
@@ -13,8 +15,8 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col col-3">
-                    <img class="img-fluid rounded" src="https://avatars.githubusercontent.com/u/14834178?v=3">
+                <div class="col col-sm-4 col-xs-12">
+                    <img style="max-height: 250px;" class="img-fluid rounded" src="https://avatars.githubusercontent.com/u/14834178?v=3">
                 </div>
 
                 <div class="col">
@@ -222,11 +224,12 @@
             <div class="container">
                 <h3>Отзывы клиентов о разработанном продукте</h3>
                 <div class="row">
-                    <div class="col">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/JeKcj2bs4EA?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                    <div class="col-5 text-center ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/JeKcj2bs4EA?controls=0" allowfullscreen></iframe>
+                        <p></p>
                     </div>
-                    <div class="col">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ftUSY7fRS9U?si=6rKG3deILgyfsdjk?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                    <div class="col-5 text-center ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/ftUSY7fRS9U?si=6rKG3deILgyfsdjk?controls=0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
