--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta property="og:image" content="https://avatars.githubusercontent.com/u/14834178?v=3" />
         <meta property="og:description" content="Технический директор" />
         <meta property="og:title" content="Булашев Дмитрий" />
+        <meta itemprop="name" content="Булашев Дмитрий - Технический Директор">
+        <meta itemprop="image" content="https://avatars.githubusercontent.com/u/14834178?v=3">
     </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
