--- a/index.html
+++ b/index.html
@@ -236,6 +236,29 @@
                             </figcaption>
                         </figure>
                     </li>
+                    <li>
+                        <figure>
+                            <blockquote>
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h3 class="text-muted">“</h3>Работали с Дмитрием около 6 лет, начинали с небольшого стартапа,
+                                        который перерос в большой проект с клиентами по всей России.
+                                        Дмитрий зарекомендовал себя как профессионал своего дела с крайне проактивной позицией по любым вопросам.
+                                        В отличие от множества сотрудников, кто имеет поверхностные знания в своей области,
+                                        он обладает фундаментальными знаниями и является примером истинного инженера.
+                                        В качестве руководителя, Дмитрий грамотно выстроил все процессы внутри команды,
+                                        что способствовало высоким показателям эффективности отдела. В команде сложилась крайне
+                                        благоприятная дружеская атмосфера и высокий уровень доверия и ответственности.
+                                        Лично для меня Дмитрий был прекрасным наставником, который на старте моей карьеры программиста
+                                        сумел многому меня научить и мотивировать на дальнейшее саморазвитие.
+                                  </div>
+                                </div>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                                Сергей Арчаков
+                            </figcaption>
+                        </figure>
+                    </li>
                 </ul>
             </div>
             <hr>
