--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             <div class="container">
                 <h3>Патенты (в соавторстве):</h3>
                 <ul>
+                    <li><a href="https://old.eapo.org/ru/publications/publicat/viewbull.php?bull=2023-06&id=043579&kind=B1&ipc=">Евразийский патент № 043579</a> АСУ "ЖИЛИЩНЫЙ СТАНДАРТ" </li>
                     <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2021667930">2021667930</a> Система управления ЖКХ «Жилищный Стандарт»;</li>
                     <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2020664240">2020664240</a> Жилищный стандарт – Freemium;</li>
                     <li><a href="https://new.fips.ru/registers-doc-view/fips_servlet?DB=EVM&DocNumber=2020664061">2020664061</a> АСУ Жилищный стандарт. Онлайн-кассы;</li>
