--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:image" content="https://avatars.githubusercontent.com/u/14834178?v=3" />
         <meta property="og:description" content="Технический директор" />
         <meta property="og:title" content="Булашев Дмитрий" />
-        <meta itemprop="name" content="Булашев Дмитрий - Технический Директор">
+        <meta itemprop="name" content="Булашев Дмитрий - Технический Директор, DBA, Backend developer"/>
         <meta itemprop="image" content="https://avatars.githubusercontent.com/u/14834178?v=3">
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -40,7 +40,7 @@
 
                 <div class="col">
                     <h1>Булашев Дмитрий Владимирович</h1>
-                    <h4>Технический директор</h4>
+                    <h4>DBA</h4>
                     <p>01.11.1984г</p>
                     <address>
                         <p><a href="mailto:d.bulashev@gmail.com">d.bulashev@gmail.com</a></p>
@@ -67,7 +67,23 @@
             <h3>Опыт работы:</h3>
             <div class="row">
                 <div class="col-2">
-                2014 — НВ
+                    06.2024 — НВ
+                </div>
+                <div class="col">
+                    <p><a href="https://magnit.tech/"><strong>Magnit Tech</strong></a><br>
+                        Platform DBA</p>
+
+                    <p>Магнит — это сеть из почти 29 тысяч розничных магазинов по всей России и за рубежом. Чтобы товары вовремя попадали на полки, а магазины без сбоев обслуживали миллионы покупателей, нужна сложная IT‑система, которую развивает Magnit Tech</p>
+
+                    <p>В компании я занимаюсь разработкой и развитием платформенных сервисов для эксплуатации PostgreSQL, обеспечивая надежность, масштабируемость и удобство управления базами данных.</p>
+
+                    <p>Стек используемых технологий: PostgreSQL, Linux, K8s, Flux CD, Go, Ruby, Ansible, Terraform, YC MDB.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                2014 — 2024
                 </div>
                 <div class="col">
                     <p><a href="https://it-uk.ru"><strong>Жилищный Стандарт</strong></a><br>
