--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <div class="col">
                     <h1>Булашев Дмитрий Владимирович</h1>
-                    <h4>DBA</h4>
+                    <h4>DBA, Технический менеджер</h4>
                     <p>01.11.1984г</p>
                     <address>
                         <p><a href="mailto:d.bulashev@gmail.com">d.bulashev@gmail.com</a></p>
@@ -77,7 +77,15 @@
 
                     <p>В компании я занимаюсь разработкой и развитием платформенных сервисов для эксплуатации PostgreSQL, обеспечивая надежность, масштабируемость и удобство управления базами данных.</p>
 
-                    <p>Стек используемых технологий: PostgreSQL, Linux, K8s, Flux CD, Go, Ruby, Ansible, Terraform, YC MDB.
+                    <p>Вклад в OpenSource:</p>
+                    <ul>
+                        <li><a href="https://github.com/lesovsky/postgresql-monitoring-book/pull/4">Dashboards in the playground repository for the "PostgreSQL Monitoring" book</a></li>
+                        <li><a href="https://github.com/CHERTS/pgscv/pull/72">pgSCV: support cloud managed database service discovery (Yandex.Cloud)</a></li>
+                        <li><a href="https://github.com/CHERTS/pgscv/pull/73">pgSCV: Multi targets metrics support</a></li>
+                        <li><a href="https://github.com/CHERTS/pgscv/pull/31">pgSCV: Reducing the amount of metrics produced by the exporter (top-k settings for tables, indexes, and queries collectors)</a></li>
+                    </ul>
+
+                    <p>Стек используемых технологий: PostgreSQL, Linux, K8s, Helm, Flux CD, Go, Ruby, Ansible, Terraform, YC MDB, Gitlab CI/CD.
                     </p>
                 </div>
             </div>
